--- a/force-app/main/default/classes/BatchAccountUpdate.cls
+++ b/force-app/main/default/classes/BatchAccountUpdate.cls
@@ -30,6 +30,7 @@ global class BatchAccountUpdate implements Database.Batchable<sObject>, Database
          // blah
          // blah more
          // blah :)
+         // Nice
     }
  
 }
