Batch Class Change

--- a/force-app/main/default/classes/BatchAccountUpdate.cls
+++ b/force-app/main/default/classes/BatchAccountUpdate.cls
@@ -32,6 +32,7 @@ global class BatchAccountUpdate implements Database.Batchable<sObject>, Database
          // blah :)
          // Nice
          // Nice work
+         // Batch
     }
  
 }
