--- a/force-app/main/default/classes/BatchAccountUpdate.cls
+++ b/force-app/main/default/classes/BatchAccountUpdate.cls
@@ -33,6 +33,7 @@ global class BatchAccountUpdate implements Database.Batchable<sObject>, Database
          // Nice
          // Nice work
          // Batch
+         // Run PMD
     }
  
 }
