--- a/force-app/main/default/classes/BatchAccountUpdate.cls
+++ b/force-app/main/default/classes/BatchAccountUpdate.cls
@@ -36,6 +36,7 @@ global class BatchAccountUpdate implements Database.Batchable<sObject>, Database
          // Run PMD
                    // Run PMD with version
 
+// Run PMD with version
     }
  
 }
