--- a/force-app/main/default/classes/BatchAccountUpdate.cls
+++ b/force-app/main/default/classes/BatchAccountUpdate.cls
@@ -36,7 +36,7 @@ global class BatchAccountUpdate implements Database.Batchable<sObject>, Database
          // Run PMD
                    // Run PMD with versions
 // Run PMD with version
-// Try again
+// Try again. Keep going
     }
  
 }
