--- a/force-app/main/default/classes/BatchAccountUpdate.cls
+++ b/force-app/main/default/classes/BatchAccountUpdate.cls
@@ -37,6 +37,7 @@ global class BatchAccountUpdate implements Database.Batchable<sObject>, Database
                    // Run PMD with versions
 // Run PMD with version
 // Try again. Keep going
+// Try again. Keep going
     }
  
 }
