--- a/force-app/main/default/classes/BatchAccountUpdate.cls
+++ b/force-app/main/default/classes/BatchAccountUpdate.cls
@@ -38,6 +38,7 @@ global class BatchAccountUpdate implements Database.Batchable<sObject>, Database
 // Run PMD with version
 // Try again. Keep going
 // Try again. Keep going
+// Try again. Keep going
     }
  
 }
