--- a/force-app/main/default/classes/BatchAccountUpdate.cls
+++ b/force-app/main/default/classes/BatchAccountUpdate.cls
@@ -39,6 +39,7 @@ global class BatchAccountUpdate implements Database.Batchable<sObject>, Database
 // Try again. Keep going
 // Try again. Keep going
 // Try again. Keep going
+// Try again. Keep going
     }
  
 }
