--- a/force-app/main/default/classes/BatchAccountUpdate.cls
+++ b/force-app/main/default/classes/BatchAccountUpdate.cls
@@ -41,6 +41,7 @@ global class BatchAccountUpdate implements Database.Batchable<sObject>, Database
 // Try again. Keep going
 // Try again. Keep going
 // Try again. Keep going
+// Try again. Keep going
     }
  
 }
