--- a/force-app/main/default/classes/BatchAccountUpdate.cls
+++ b/force-app/main/default/classes/BatchAccountUpdate.cls
@@ -49,6 +49,7 @@ global class BatchAccountUpdate implements Database.Batchable<sObject>, Database
 // RN-025 Update
 // RN-026 Update
 // RN-027 Update
+// RN-028 Update
     }
  
 }
